<?xml version="1.0"?>    
<package>
  <name>rls_rviz_plugins</name>
  <version>0.1.0</version>
  <description>
     Implements rviz plugins for the adaptive force estimation interface
  </description>
  <maintainer email="xli87@jhu.edu">Xiao Li</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rviz_plugin_tutorials</url>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>cisst_msgs</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>cisst_msgs</run_depend>


  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
